src/test/ui/type-alias-impl-trait/issue-76202-trait-impl-for-tait.min_tait.stderr
error: cannot implement trait on type alias impl trait
  --> $DIR/issue-76202-trait-impl-for-tait.rs:19:1
   |
LL | impl Test for F {
   | ^^^^^^^^^^^^^^^
   |
note: type alias impl trait defined here
  --> $DIR/issue-76202-trait-impl-for-tait.rs:12:10
   |
LL | type F = impl Dummy;
   |          ^^^^^^^^^^

error: aborting due to previous error

